--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -41,7 +41,7 @@ html, body{
 }
 
 .navbar-horizontal ul{
-    margin: 0;
+    margin: 1rem 0 0 0;
     padding: 0;
 }
 
@@ -58,16 +58,12 @@ html, body{
 
 .navbar-horizontal a{
     color: #343a40;
+    transform: ;
 }
 
 .icon-style{
     color: #343a40;
     font-size: 2rem;;
-}
-
-.my-6{
-    margin-top: 4rem;
-    margin-bottom: 4rem;
 }
 
 @media (max-width: 991.98px) {
@@ -78,7 +74,7 @@ html, body{
     
     .navbar-vertical ul{
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
     }
 
     .navbar-vertical li{
